syntax = "proto3";

package proto;
option go_package = "../proto";

message Message {
    string body = 1;
}

message Request {
    string filelocation = 1;
}

message FileResponse {
    string path = 1;
    bytes data = 2;
}

service GetFileService {
    rpc GetFile (Message) returns (Request) {}
    rpc UploadFile (FileResponse) returns (Message) {}
}
